--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -9,5 +9,27 @@
   <body>
     <h1 class="mb-4 text-center">Магазин "MyShop"</h1>
    <h4 class="mb-4 text-center">Вы находитесь на сайте, предназначенном для продажи товаров</h4>
+<div class="container">
+    <div class="row text-center">
+        {% for product in products %}
+        <div class="col-3">
+            <div class="card mb-4 box-shadow">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">{{product.product_name}}</h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title pricing-card-title">{{product.price}}</h1>
+                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
+                        <li>{{product.description}}</li>
+
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                </div>
+
+            </div>
+
+        </div>
+        {% endfor %}
+    </div>
   </body>
 </html>
