--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,35 +1,26 @@
-<!doctype html>
-<html lang="en">
- <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Главная</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1 class="mb-4 text-center">Магазин "MyShop"</h1>
-   <h4 class="mb-4 text-center">Вы находитесь на сайте, предназначенном для продажи товаров</h4>
-<div class="container">
-    <div class="row text-center">
-        {% for product in products %}
-        <div class="col-3">
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">{{product.product_name}}</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">{{product.price}}</h1>
-                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>{{product.description}}</li>
-
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
-                </div>
-
-            </div>
-
+{% extends 'catalog/base.html' %}
+{% load my_tags %}
+{% block content %}
+{% for product in products %}
+<div class="col-3">
+    <div class="card mb-4 box-shadow">
+        <div class="card-header">
+            <h4 class="my-0 font-weight-normal">{{product.product_name}}</h4>
         </div>
-        {% endfor %}
+        <div class="card-body">
+            <h1 class="card-title pricing-card-title">{{product.price}}</h1>
+            <img src="{{ product.image | media_url }}" alt="" style="max-width: 75%;">
+            <ul class="list-unstyled mt-3 mb-4 text-start m-3">
+                <li>{{product.description|truncatechars:100}}</li>
+
+            </ul>
+
+
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+        </div>
+
     </div>
-  </body>
-</html>
+
+</div>
+{% endfor %}
+{% endblock %}
