Контроллер отображения главной страницы изменен на CBV. Внесены изменения соответствующие изменения в urls.py и index.html

--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,7 +1,7 @@
 {% extends 'catalog/base.html' %}
 {% load my_tags %}
 {% block content %}
-{% for product in products %}
+{% for product in object_list %}
 <div class="col-3">
     <div class="card mb-4 box-shadow">
         <div class="card-header">
