--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -5,22 +5,22 @@
     <h4 class="mb-4 text-center">Информация о товаре</h4>
     <div class="card mb-4 box-shadow">
         <div class="card-header">
-            <h4 class="my-0  mb-4 font-weight-normal">{{product.product_name}}</h4>
+            <h4 class="my-0  mb-4 font-weight-normal">{{object.product_name}}</h4>
         <img src="{% mediafile product.image %}" alt="" style="max-width: 50%;">
         </div>
 
         <div class="card-body">
-            <h1 class="card-title pricing-card-title ">{{product.price}}</h1>
+            <h1 class="card-title pricing-card-title ">{{object.price}}</h1>
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                <li>Описание: {{product.description}}</li>
+                <li>Описание: {{object.description}}</li>
 
             </ul>
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                <li>Категория: {{product.category}}</li>
+                <li>Категория: {{object.category}}</li>
 
             </ul>
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                <li> {{product.last_modified_date}}</li>
+                <li> {{object.last_modified_date}}</li>
 
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
