--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="ru" data-bs-theme="auto">
 <head>
-    <script src="/docs/5.3/assets/js/color-modes.js"></script>
+    <script src="{% static 'js/color-modes.js' %}"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
