Добавлены пункты меню

--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -13,6 +13,19 @@
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'blog:list' %}">Блог</a>
             </li>
+
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'users:logout' %}">Выход</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'users:login' %}">Вход</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'users:register' %}">Регистрация</a>
+                {% endif %}
+            </li>
         </ul>
     </div>
 </nav>
