--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,8 +10,9 @@
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary w-50" >Вход</button>
+            <button type="submit" class="btn btn-primary w-50 mb-4" >Вход</button>
         </form>
+
 <div class="card-footer mt-4"></div>
     </div>
 </div>
