--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -16,6 +16,9 @@
 
             {% if user.is_authenticated %}
             <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'users:profile' %}">Профиль</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'users:logout' %}">Выход</a>
             </li>
             {% else %}
