В шаблон добавлено отображение владельца товара

--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -25,6 +25,14 @@
             </ul>
             <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                 <li>
+                    {% if object.owner %}
+                    Владелец: {{object.owner}}
+                    {% endif %}
+                </li>
+
+            </ul>
+            <ul class="list-unstyled mt-3 mb-4 text-start m-3">
+                <li>
                     {% if version %}
                     Активная версия: {{version}}
 
