--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -5,6 +5,9 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'catalog:index'%}">Главная</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'catalog:categories'%}">Категории</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'catalog:list_product'%}">Товары</a>
             </li>
             <li class="nav-item">
